# micromouse-firmware-dual-platform-example

./: LICENSE.txt  README.md
firmware/: .gitignore  CMakeLists.txt
firmware/include/MicroMouse/: Robot.h
firmware/include/MicroMouse/Hardware/: Motors.hpp
firmware/include/MicroMouse/Subsystems/: Drive.hpp
firmware/lib/: Robot.cpp
firmware/lib/Hardware/: Motors.cpp
firmware/lib/Subsystems/: Drive.cpp
firmware/platform/desktop/: CMakeLists.txt
firmware/platform/desktop/src/: main.cpp
firmware/platform/desktop/src/Hardware/: MotorsImpl.cpp
firmware/platform/robot/: CMakeLists.txt  micromouse.ioc
firmware/platform/robot/Core/Src/: main.c
firmware/platform/robot/Core/Src/Hardware/: MotorsImpl.cpp
firmware/platform/robot/cmake/: gcc-arm-none-eabi.cmake
firmware/platform/robot/cmake/stm32cubemx/: CMakeLists.txt
firmware/tests/: CMakeLists.txt  ExampleTests.cpp
